--- a/lang/es.json
+++ b/lang/es.json
@@ -39,7 +39,7 @@
     "Create Team": "Crear equipo",
     "Created.": "Creado.",
     "Current Password": "Contraseña actual",
-    "Dashboard": "Panel",
+    "Dashboard": "Reportes de Actividades Diarias",
     "Delete": "Eliminar",
     "Delete Account": "Borrar cuenta",
     "Delete API Token": "Borrar token API",
